# motor-vehicle-registration-schedule-ph

./: .env.example  LICENSE  README.md  application.py  custom_calendar.py  docker-compose.yml  forms.py  pyproject.toml  requirements.txt
templates/: index.html
