[tool.poetry]
name = "motor-vehicle-registration-scheiule"
version = "0.1.1"
description = "Sample application for the blog Knowing When to Renew your Vehicle's Registration in the Philippines🇵🇭 using Python"
authors = ["Ronie Martinez <ronmarti18@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^3.0.1"
Flask-WTF = "^1.2.1"
gevent = "^23.9.1"
gunicorn = "^21.2.0"
pytz = "^2023.3"

[tool.poetry.group.dev.dependencies]
autoflake = "^1.4"
black = "^24.1.0"
isort = "^5.13.2"
mypy = "^1.8"
pyproject-flake8 = "^5.0.4"
types-pytz = "^2023.3.1"

[tool.isort]
line_length = 120
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
include_trailing_comma = true
ensure_newline_before_comments = true
atomic = true

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = """
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/setup.py
"""

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
